# stm32_drawing_robot

./: .gitignore  Cargo.toml  README.md  build_and_load.sh  memory.x  openocd.cfg
.cargo/: config
examples/: blink.rs  hello.rs  i2c_display.rs  rtfm_singleton.rs  uart.rs  usb_serial.rs
src/: main.rs
