[package]
authors = ["Aleksandrov Vladimir <invis87@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "bare-metal"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"

embedded-hal = "0.2.3"
nb = "0.1.2"

### for oled display
embedded-graphics = "0.6.0-alpha.3"
ssd1306 = "0.3.0-alpha.4"
###

[dependencies.stm32f1]
version = "0.9.0"
features = ["stm32f103", "rt"]

[dependencies.stm32f1xx-hal]
version = "0.5.3"
features = ["rt", "stm32f103", "medium"]

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# this lets you use `cargo fix`!
[[bin]]
name = "bare-metal"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
